<resources>
    <string name="app_name">NewzBay</string>
    <string name="app_id">1531168860534945</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_newsfeed_activity">newsfeed_activity</string>
    <string name="title_activity_settings_activity">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_articles_priority">ArticlesPriority</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_first_entrance">firstEntrance</string>

    <string name="SignInAsGuest">היכנס כאורח</string>
    <string name="SignInWithFacebook">היכנס באמצעות פייסבוק</string>
    <string name="SignInWithGoogle">היכנס באמצעות גוגל</string>
    <string name="title_activity_explore_articles">ExploreArticles</string>

    <string name="hotNews">חדשות חמות</string>
    <string name="news">חדשות בארץ</string>
    <string name="globalNews">חדשות בעולם</string>
    <string name="politics">פוליטיקה</string>
    <string name="economy">כלכלה</string>
    <string name="sport">ספורט</string>
    <string name="culture">תרבות</string>
    <string name="celebrities">סלבס</string>
    <string name="technology">טכנולוגיה</string>
    <string name="science">מדע</string>
    <string name="title_activity_del">del</string>
    <string name="send">שלח</string>
    <string name="WriteComment">כתוב תגובה...</string>
    <string name="PriorityHelp1">במסך זה את/ה בוחר את האתרים שמהם אתה מעוניין לקבל כתבות בנושא</string>
    <string name="PriorityHelp2">האתרים מתועדפים על פי המיקום שלהם ברשימה. ככל שהאתר יותר למעלה ברשימה ככה יראו אותו יותר.</string>
    <string name="PriorityHelp3">על מנת לא לראות כתבות מאתר מסויים יש להחליק אתר זה ימינה.</string>
    <string name="PriorityHelp4">על מנת להחזיר אתרים שנמחקו מהרשימה לחץ על הכפתור השמאלי למעלה (+).</string>
    <string name="PriorityHelp5">תיעדוף האתרים: יש ללחוץ על אתר מסויים ולהחזיק את האצבע כשנייה, ולאחר מכן לגרור למקום הרצוי ברשימה.</string>
    <string name="GotIt">הבנתי</string>
    <string name="InnerWebHelp1">במסך זה נטען הדף האינטרנטי</string>
    <string name="InnerWebHelp2">לחיצה קצרה על מקש החזור של המכשיר תחזור עמוד אחד אחורה ולחיצה ארוכה תסגור את הדפדפן</string>
    <string name="NewsFeedHelp1">כדי לפתוח את התפריט</string>
    <string name="NewsFeedHelp2">הראשי ניתן גם להחליק הצידה</string>
    <string name="NewsFeedHelp3">לחיצה על התמונה של הכתבה</string>
    <string name="NewsFeedHelp4">תוביל לכתבה המלאה</string>
    <string name="Done">סיים</string>
    <string name="WelcomeToBay">ברוכים הבאים</string>
    <string name="comment">הגב</string>
    <string name="like">אהבתי</string>
    <string name="categories">קטגוריות</string>
    <string name="disconnect">התנתק</string>
    <string name="contact">צור קשר</string>
    <string name="SiteSelection">בחירת אתרים</string>
    <string name="PrioritySelection">בחירת העדפות</string>
    <string name="SubjectSelectionHelp1">יש ללחוץ על כל נושא ולתעדף את האתרים אותם תרצו לראות ובסדר אותם תרצו לראות</string>
    <string name="newsServer">israelNewz</string>
    <string name="globalNewsServer">worldNewz</string>
    <string name="politicsServer">politics</string>
    <string name="economyServer">economy</string>
    <string name="sportServer">sport</string>
    <string name="cultureServer">culture</string>
    <string name="celebsServer">celebs</string>
    <string name="technologyServer">technology</string>
    <string name="scienceServer">science</string>
    <string name="newzbay">NewzBay</string>
    <string name="slogan">All News, Just Use</string>
    <string name="reconnect">נסה להתחבר שוב</string>
    <string name="donate">תמכו בנו</string>
    <string name="ad_unit_id">ca-app-pub-3444735342824338/7447438409</string>
    <string name="share">שתף</string>
    <string name="connectWithSocialNet1">על מנת להנות משלל האפשרויות שהאפליקציה מציעה</string>
    <string name="connectWithSocialNet2">כמו: בחירת אתרים לכל נושא, כתיבת תגובות ועשיית לייקים</string>
    <string name="connectWithSocialNet3">יש להתחבר באמצעות גוגל או פייסבוק</string>
</resources>
