<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    android:weightSum="10"
    android:id="@+id/activity_priority">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PrioritySelection"
            android:textStyle="bold"
            android:textColor="@color/nb"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_priority_mainHeadLine"
            android:paddingBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/SubjectSelectionHelp1"
            android:textStyle="bold"
            android:id="@+id/tv_explanation"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_below="@id/tv_priority_mainHeadLine"
            android:layout_centerHorizontal="true"
            android:paddingBottom="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"
            android:contentDescription="@string/newsServer"
            android:drawableTop="@drawable/news_category"
            android:background="@color/transparent"
            android:onClick="choosePriorityBySubject"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/globalNews"
            android:textSize="18sp"
            android:contentDescription="@string/globalNewsServer"
            android:drawableTop="@drawable/global_news_category"
            android:background="@color/transparent"
            android:onClick="choosePriorityBySubject"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/politics"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/politics_category"
            android:background="@color/transparent"
            android:contentDescription="@string/politicsServer"
            android:onClick="choosePriorityBySubject"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/economy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/economy_category"
            android:background="@color/transparent"
            android:contentDescription="@string/economyServer"
            android:onClick="choosePriorityBySubject"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sport"
            android:gravity="center"
            android:textSize="18sp"
            android:drawableTop="@drawable/sport_category"
            android:background="@color/transparent"
            android:contentDescription="@string/sportServer"
            android:onClick="choosePriorityBySubject"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/culture"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/culture_category"
            android:background="@color/transparent"
            android:contentDescription="@string/cultureServer"
            android:onClick="choosePriorityBySubject"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celebrities"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/celebrities_category"
            android:background="@color/transparent"
            android:contentDescription="@string/celebsServer"
            android:onClick="choosePriorityBySubject"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/technology"
            android:gravity="center"
            android:textSize="18sp"
            android:drawableTop="@drawable/technology_category"
            android:background="@color/transparent"
            android:contentDescription="@string/technologyServer"
            android:onClick="choosePriorityBySubject"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/science"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/science_category"
            android:background="@color/transparent"
            android:contentDescription="@string/scienceServer"
            android:onClick="choosePriorityBySubject"/>
    </LinearLayout>

    <RelativeLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/btn_endPriority"
            android:textStyle="bold"
            android:background="@drawable/button_rounded_corners_facebook"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</LinearLayout>