<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityExplanationNewsFeed">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main">
    </include>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/arrow_right_long"
        android:paddingRight="12dp"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NewsFeedHelp1"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NewsFeedHelp2"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NewsFeedHelp3"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView6"
        android:layout_marginTop="106dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NewsFeedHelp4"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GotIt"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:id="@+id/button"
        android:background="@drawable/button_rounded_corners_facebook"
        android:onClick="closeExplanation"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
