<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplanationNewsFeed">

    <include
        android:id="@+id/toolbar_web"
        layout="@layout/toolbar_web">
    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InnerWebHelp1"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GotIt"
        android:textStyle="bold"
        android:id="@+id/button"
        android:background="@drawable/button_rounded_corners_facebook"
        android:onClick="closeExplanation"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:background="@drawable/arrow_down2"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InnerWebHelp2"
        android:textColor="@color/ExplanationBlue"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:id="@+id/textView8"
        android:layout_above="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4" />

</RelativeLayout>
