<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityEntrance"
    android:background="@drawable/main_background"
    android:id="@+id/entrance_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newzbay"
        android:textSize="78sp"
        android:id="@+id/tv_newzbay"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/nb"
        android:textStyle="bold"
        android:background="@color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_newzbay"
        android:textSize="25sp"
        android:text="@string/slogan"
        android:layout_centerHorizontal="true"
        android:textColor="@color/nb"
        android:id="@+id/tv_slogan"
        android:textStyle="bold"
        android:background="@color/transparent"/>

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/btn_Google"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/tv_slogan"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/transparent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:id="@+id/btn_NB"
        android:text="@string/SignInAsGuest"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_Facebook"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_rounded_corners"
        android:paddingLeft="5dp"
        android:onClick="signInAsGuest"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_Facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        fb:com_facebook_login_text="@string/SignInWithFacebook"
        fb:com_facebook_logout_text="@string/SignInWithFacebook"
        android:background="@drawable/button_rounded_corners_facebook"
        android:layout_marginTop="27dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_below="@+id/btn_Google"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/iv_nb_loading"
        android:background="@drawable/anchor_big"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_serverIP"
        android:layout_alignParentEnd="true"
        android:alpha="0.5"
        android:id="@+id/view_shadow"
        android:background="@color/black"
        android:layout_alignTop="@+id/btn_connectToServer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_serverIP"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:hint="הכנס את האייפי של השרת"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btn_connectToServer"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btn_connectToServer"
        android:textStyle="bold"
        android:onClick="connectToServer"
        android:background="@drawable/enter"
        android:backgroundTint="@color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
