<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mainHeadline"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tv_mainHeadline"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="secondHeadline"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="2"
        android:id="@+id/tv_secondHeadline"
        android:layout_gravity="center"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SITE"
            android:layout_marginTop="3dp"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:id="@+id/tv_site"
            android:textStyle="bold"
            android:layout_marginRight="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:id="@+id/tv_date"
            android:layout_alignTop="@+id/tv_site"
            android:textStyle="bold"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ib_picture"
        android:background="@color/transparent"
        android:adjustViewBounds="true"
        android:minHeight="150dp"
        android:scaleType="fitCenter"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_likes"
            android:text="+999"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:saveEnabled="true"
            android:textColor="@color/grey" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/im_likes"
            android:layout_toEndOf="@id/tv_likes"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/likes_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_comments"
            android:text="+999"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/im_likes"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/im_comments"
            android:layout_marginLeft="3dp"
            android:layout_toEndOf="@id/tv_comments"
            android:background="@drawable/comments_icon"/>

    </RelativeLayout>

    <View
        android:layout_height="2dp"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:background="@color/nb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:id="@+id/btn_like"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:saveEnabled="true"
            android:textColor="@color/grey"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_like"
            android:paddingLeft="15dp"/>

        <View
            android:layout_width="1dp"
            android:id="@+id/line2"
            android:layout_height="match_parent"
            android:background="@color/nb" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:id="@+id/btn_comment"
            android:text="@string/comment"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_comment"
            android:paddingLeft="15dp"/>

        <View
            android:layout_width="1dp"
            android:id="@+id/line3"
            android:layout_height="match_parent"
            android:background="@color/nb" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:id="@+id/btn_share"
            android:textStyle="bold"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_share"
            android:paddingLeft="15dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="@color/nb"
        android:id="@+id/iv_line"/>

</LinearLayout>